--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -88,3 +88,9 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+/*
+.bg-dark {
+  background-color: #0471af !important;
+}
+*/
