--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -1,11 +1,22 @@
+@font-face {
+  font-family: AvenirNextLTProLight ;
+  src: url(sansation_light.woff);
+}
+
 main > .container {
     padding: 70px 15px 20px;
+	font-family: AvenirNextLTProLight;
+}
+
+body{
+	font-family: AvenirNextLTProLight;
 }
 
 .footer {
-    background-color: #f5f5f5;
+    background-color: #80AE4F;
     font-size: .9em;
     height: 60px;
+	color: white !important;
 }
 
 .footer > .container {
@@ -112,4 +123,23 @@ a.desc:after {
 
 .help-block{
 	color: red;
+}
+
+.white-space{
+	background-color: white;
+}
+
+.navbar-brand {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
+
+.dropdown-toggle{
+border-radius: 50%;
+background-color: #80AE4F;
+}
+
+.dropdown-toggle::after {
+    content: none;
 }
